chore(dev): :truck: move scss folder from `$lib` dicrectory to `src`
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -1,5 +1,5 @@
-@import '../src/lib/scss/modules/default.scss';
-@import '../src/lib/scss/global.scss';
+@import '../src/scss/modules/default.scss';
+@import '../src/scss/global.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 * {
 	box-sizing: border-box;
