--- a/src/scss/modules/components/button/_base.scss
+++ b/src/scss/modules/components/button/_base.scss
@@ -24,6 +24,7 @@ $icon-marginX: 0.125rem;
 	justify-content: center;
 	cursor: pointer;
 	transition: background 0.25s, color 0.25s, border 0.25s;
+	font-family: inherit;
 	// @include truncate(100%);
 
 	span {
