--- a/src/lib/scss/components/button/_outline.scss
+++ b/src/lib/scss/components/button/_outline.scss
@@ -3,41 +3,41 @@
 }
 @mixin button-outline {
 	&.outline {
-		border-color: var(--natural);
-		color: var(--base);
+		border-color: hsl(var(--natural));
+		color: hsl(var(--base));
 		:global {
 			path {
-				fill: var(--base);
+				fill: hsl(var(--base));
 			}
 		}
 		@include action-focus {
-			border-color: var(--base);
-			background-color: var(--natural);
-			color: var(--natural-font);
+			border-color: hsl(var(--base));
+			background-color: hsl(var(--natural));
+			color: hsl(var(--natural-font));
 			:global {
 				path {
-					fill: var(--natural-font);
+					fill: hsl(var(--natural-font));
 				}
 			}
 		}
 
 		@include action-hover {
-			background-color: var(--base);
-			color: var(--base-font);
+			background-color: hsl(var(--base));
+			color: hsl(var(--base-font));
 			:global {
 				path {
-					fill: var(--base-font);
+					fill: hsl(var(--base-font));
 				}
 			}
 		}
 		@include action-active {
-			border-color: var(--base);
+			border-color: hsl(var(--base));
 
-			background-color: var(--dark);
-			color: var(--dark-font);
+			background-color: hsl(var(--dark));
+			color: hsl(var(--dark-font));
 			:global {
 				path {
-					fill: var(--dark-font);
+					fill: hsl(var(--dark-font));
 				}
 			}
 		}
