--- a/src/lib/scss/components/card/_base.scss
+++ b/src/lib/scss/components/card/_base.scss
@@ -34,7 +34,7 @@ $icon-marginX: 0.125rem;
 		border-style: solid;
 		font-size: $base-fontSize;
 		transition: background 0.25s, color 0.25s;
-		box-shadow: 4px 8px 8px var(--white);
+		box-shadow: 4px 8px 8px hsl(var(--white));
 	}
 	.cardContent {
 		padding: math.div($base-paddingY, 4) $base-paddingX * 0.6;
