fix: :bug: fix `Title` component's `color` property not wrapped by hsl
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/title/_base.scss
+++ b/src/lib/scss/components/title/_base.scss
@@ -7,7 +7,7 @@ $base-fontSize: 0.9rem;
 
 & {
 	padding: $base-paddingY $base-paddingX;
-	color: var(--natural-font);
+	color: hsl(var(--natural-font));
 	text-transform: uppercase;
 	margin: $marginY $marginX;
 	margin-bottom: math.div($marginY, 3);
