feat(alpha): :sparkles: bootstrap `Switch` component
- add associated `Storybook`
- change light default color in `_color.scss`
- fix `Button` component's gradient border
- change `Checkbox` invalid `border-width` value to `unset`

Fixes #9

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/checkbox/_base.scss
+++ b/src/lib/scss/components/checkbox/_base.scss
@@ -13,7 +13,7 @@ $mask-borderRadius: $borderRadius * 0.45;
 & {
 	// padding: $base-paddingY $base-paddingX;
 	position: relative;
-	border-width: none;
+	border-width: unset;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
