--- a/src/lib/scss/components/checkbox/_base.scss
+++ b/src/lib/scss/components/checkbox/_base.scss
@@ -17,6 +17,7 @@ $mask-borderRadius: $borderRadius * 0.45;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
+	align-self: center;
 	margin: $base-marginY $base-marginX;
 	font-size: $base-fontSize;
 	border-radius: $base-borderRadius;
