perf(alpha): :wheelchair: improve `Input`,`Checkbox` and `Radio` components a11y by implementing a default unique id for id/for HTML attribute
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/checkbox/_base.scss
+++ b/src/lib/scss/components/checkbox/_base.scss
@@ -105,7 +105,7 @@ $mask-borderRadius: $borderRadius * 0.45;
 				background-color: hsl(var(--base) / 50%);
 			}
 		}
-		&:disabled ~ span {
+		&:disabled ~ label {
 			opacity: 0.5;
 		}
 		@include action-hover {
