--- a/src/lib/scss/components/avatar/_base.scss
+++ b/src/lib/scss/components/avatar/_base.scss
@@ -44,9 +44,19 @@ $txt-borderRadius: calc(var(--size, $base-size) * 0.22);
 		align-items: center;
 		justify-content: center;
 		display: flex;
-		background-color: hsl(var(--darker) / 40%);
-		padding: 10%;
+		padding: $base-padding $base-padding;
 		color: hsl(var(--darker-font));
+		box-sizing: border-box;
+		.textBackdrop {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: hsl(var(--darker) / 40%);
+			border-radius: $avatar-borderRadius;
+			overflow: hidden;
+		}
 		span {
 			font-weight: 600;
 			@include truncate(100%);
