feat(alpha): :sparkles: add svg icon support for `Input` component
- improve `Input` and `Avatar` tests
- run `pnpm format`

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/button/_base.scss
+++ b/src/lib/scss/components/button/_base.scss
@@ -28,7 +28,7 @@ $icon-marginX: 0.125rem;
 	// @include truncate(100%);
 
 	span {
-		display: inline-block;
+		display: inline-flex;
 		margin: auto $text-marginX;
 	}
 	span.icon {
