fix(patch): :lipstick: fix `Button` and `Input` scss styling issues
- update `Input` component storybook

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/button/_base.scss
+++ b/src/lib/scss/components/button/_base.scss
@@ -46,6 +46,9 @@ $icon-marginX: 0.125rem;
 	&.circle {
 		border-radius: $base-borderRadius * 2;
 		padding: $paddingX;
+		&:before {
+			border-radius: $base-borderRadius * 2 !important;
+		}
 	}
 
 	@include action-focus {
