--- a/src/lib/scss/components/input/_fill.scss
+++ b/src/lib/scss/components/input/_fill.scss
@@ -15,6 +15,7 @@
 		}
 		@include action-hover {
 			.inputContainer {
+				// background-color: hsl(var(--font) / 80%);
 				label {
 					color: hsla(var(--darker) / 35%);
 					.icon {
@@ -23,13 +24,14 @@
 				}
 				input {
 					&:not(:disabled) {
-						background-color: hsla(var(--light) / 15%);
+						// background-color: hsla(var(--natural) / 5%);
 					}
 				}
 			}
 		}
 		&:focus-within {
 			.inputContainer {
+				background-color: hsl(var(--font) / 100%);
 				label {
 					color: hsl(var(--natural-font));
 					.icon {
