--- a/src/lib/scss/components/input/_base.scss
+++ b/src/lib/scss/components/input/_base.scss
@@ -25,6 +25,7 @@ $icon-borderRadius: $borderRadius * 1;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		transition: background-color 0.3s ease;
 
 		label {
 			position: absolute;
@@ -159,7 +160,7 @@ $icon-borderRadius: $borderRadius * 1;
 		&.icon {
 			.inputContainer {
 				input {
-					padding-right: calc($base-paddingX + 1.6rem);
+					padding-right: calc($base-paddingX + 1.8rem);
 					padding-left: 0;
 				}
 			}
@@ -168,7 +169,7 @@ $icon-borderRadius: $borderRadius * 1;
 					padding-right: $base-paddingX * 2.5;
 				}
 				input {
-					padding-right: calc($base-paddingX + 2rem);
+					padding-right: calc($base-paddingX + 2.2rem);
 				}
 			}
 		}
