refactor(dev): :art: remove unused scss rules
Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/input/_fill.scss
+++ b/src/lib/scss/components/input/_fill.scss
@@ -22,11 +22,11 @@
 						color: hsla(var(--dark-font) / 100%);
 					}
 				}
-				input {
-					&:not(:disabled) {
-						// background-color: hsla(var(--natural) / 5%);
-					}
-				}
+				// input {
+				// 	&:not(:disabled) {
+				// 		background-color: hsla(var(--natural) / 5%);
+				// 	}
+				// }
 			}
 		}
 		&:focus-within {
