test(patch): :children_crossing: expose class and useAction parameters from `Button` component
- update unit tests
- add `useAction` ts types
- add `border-radius` to `Button` transitioning styles

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/button/_base.scss
+++ b/src/lib/scss/components/button/_base.scss
@@ -23,7 +23,7 @@ $icon-marginX: 0.125rem;
 	font-size: $base-fontSize;
 	justify-content: center;
 	cursor: pointer;
-	transition: background 0.25s, color 0.25s, border 0.25s;
+	transition: background 0.25s, color 0.25s, border 0.25s, border-radius 0.25s;
 	font-family: inherit;
 	// @include truncate(100%);
 
