style(patch): :recycle: refactor code base
- remove background-color style from `_normalize.scss` and `__layout.svelte`
- fix `Switch` coponent's text alignment
- fix `Input` component icon not showing up
 - improve `Card` component drop shadow
- rename `Modal` and `Input` component function arguments

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/input/_base.scss
+++ b/src/lib/scss/components/input/_base.scss
@@ -61,6 +61,7 @@ $icon-borderRadius: $borderRadius * 1;
 				transition: inherit;
 				transition: padding 0.3s ease, border 0.3s ease, opacity 0.3s ease, color 0.3s ease,
 					box-shadow 0.3s ease;
+				box-sizing: content-box;
 			}
 			.label {
 				box-sizing: border-box;
