refactor(dev): :recycle: Increase code readablity and fix naming issues
- change `Input` component scss variant `@mixin` names
- improve body overflow locking logic in `Modal` component
- change `Backdrop` component position style to `fixed`

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/backdrop/_base.scss
+++ b/src/lib/scss/components/backdrop/_base.scss
@@ -11,9 +11,11 @@ $icon-size: 0.8rem;
 $icon-marginX: 0.125rem;
 
 & {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
+	top: 0;
+	right: 0;
 	background-color: hsl(var(--darker) / 50%);
 	&.overlayBlur {
 		background-color: hsl(var(--dark) / 30%);
