feat(patch): :lipstick: implement `background-color:transparent` for `Backdrop` component
- update associated unit tests
- change default `color` prop to `transparent`

Signed-off-by: Soren Abedi <soren.abedi@gmail.com>

--- a/src/lib/scss/components/backdrop/_base.scss
+++ b/src/lib/scss/components/backdrop/_base.scss
@@ -16,7 +16,9 @@ $icon-marginX: 0.125rem;
 	height: 100%;
 	top: 0;
 	right: 0;
-	background-color: hsl(var(--darker) / 50%);
+	&:not(.transparent) {
+		background-color: hsl(var(--darker) / 50%);
+	}
 	&.overlayBlur {
 		background-color: hsl(var(--dark) / 30%);
 		backdrop-filter: blur(10px);
